--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "prisma": "^5.10.2",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
+    "react-countdown-now": "^2.1.2",
     "react-dom": "18.2.0",
+    "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.4",
+    "reactjs-countdown": "^0.0.8",
     "stripe": "^14.19.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
